--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "bson": "^4.0.0-rc5",
     "cron": "^1.4.1",
     "cryptr": "^4.0.0",
     "express": "^4.16.4",
